--- a/html-outputs/kyso.yaml
+++ b/html-outputs/kyso.yaml
@@ -1,5 +1,5 @@
-organization: kyso-demos
-team: data-analyses
+organization: helena-domo
+channel: general 
 main: index.html
 title: "10xgenomics HTML Report: Chromium Nuclei Analysis"
 description: "Visualising nuclei isolated from adult mouse kidney using the Chromium Nuclei Isolation kit, plotting out K-means gene expressions."
