--- a/jupyter-notebooks/kyso.yaml
+++ b/jupyter-notebooks/kyso.yaml
@@ -3,8 +3,8 @@ title: "Jupyter Notebook: Graphing Mutation Ratios"
 description: >-
   Using plotly to plot out synonymous mutations (Ks Plot) and fractionation
   biases.
-organization: kyso-demos
-team: data-analyses
+organization: helena-domo
+channel: general 
 tags:
   - plotly
   - genomics
