--- a/powerpoint-presentations/kyso.yaml
+++ b/powerpoint-presentations/kyso.yaml
@@ -1,7 +1,7 @@
 main: Kyso Info Deck.pptx
 author: kyl@kyso.io
-organization: kyso-demos
-team: data-analyses
+organization: helena-domo
+channel: general 
 title: "PowerPoint Presentation: Knowledge Aggregation with Kyso"
 description: ""
 tags: ["data science", knowledge management]
