--- a/small-molecules/kyso.yaml
+++ b/small-molecules/kyso.yaml
@@ -1,8 +1,8 @@
 main: main.ipynb
 author: helena@kyso.io
 type: jupyter
-organization: kyso-demos
-team: data-analyses
+organization: helena-domo
+channel: general 
 title: "Visualizing Small Molecules Datasets with mols2grids"
 description: ""
 tags: ["small molecules", targets]
