--- a/kyso.yaml
+++ b/kyso.yaml
@@ -9,7 +9,7 @@ reports:
   # - markdown-writeups
   # - nba-player-clustering
   # - baseball-data-analysis
-organization: helena-domo
+organization: elena-rueda
 channel: general 
 author: helena@kyso.io
 
