--- a/data-apps/kyso.yaml
+++ b/data-apps/kyso.yaml
@@ -3,7 +3,7 @@ title: "Jupyter Notebook: Graphing Mutation Ratios"
 description: >-
   Using plotly to plot out synonymous mutations (Ks Plot) and fractionation
   biases.
-organization: helena-domo
+organization: elena-rueda
 channel: general 
 tags:
   - plotly
