--- a/html-outputs/kyso.yaml
+++ b/html-outputs/kyso.yaml
@@ -1,4 +1,4 @@
-organization: helena-domo
+organization: monica
 channel: general 
 main: index.html
 title: "10xgenomics HTML Report: Chromium Nuclei Analysis"
