--- a/data-apps/kyso.yaml
+++ b/data-apps/kyso.yaml
@@ -1,5 +1,5 @@
-main: main.ipynb
-title: "Jupyter Notebook: Graphing Mutation Ratios"
+main: index.html
+title: "And we can embed BI dashboards & data apps.."
 description: >-
   Using plotly to plot out synonymous mutations (Ks Plot) and fractionation
   biases.
